# CropGym-BanditResourceAllocation

./: README.md  pyproject.toml
cropgym/: __init__.py  baselines.py  count_eval_scenarios.py  eval_allocator.py  fit_lp.py  fit_nue_response.py  get_rotations.py  run_for_response.py  run_scenarios.py  test_implementation_nnagp.py  train_allocator.py
cropgym/agents/: nn_agp.py
cropgym/configs/: crop_prices.csv  fertilizer_price.csv
cropgym/configs/crop/: crops.yaml
cropgym/configs/scenarios/: scenario_coords.yaml
cropgym/envs/: allocation_env.py  multi_field_env.py  pcse_env.py  singular_env.py
cropgym/utils/: agent_helpers.py  bandit_logging.py  helper_for_unit_tests.py  historical_forecasts.py  nitrogen_helpers.py  pcse_config_helper.py  plotters.py  process_pcse_output.py  rewards.py  scenario_utils.py
cropgym/utils_soil/: env_soil_functions.py  generate_soil_files.py  soil_feature_extractor.py  soilgrids.py
cropgymzoo/: __init__.py  count_eval_scenarios.py  eval_allocator.py  eval_policy.py  eval_tianshou.py  fit_lp.py  fit_nue_response.py  get_rotations.py  inference.py  inference_tianshou.py  run_for_response.py  run_scenarios.py  test_implementation_nnagp.py  train.py  train_allocator.py  train_policy.py  train_rllib.py  train_tianshou.py
cropgymzoo/agents/: bandit_algorithms.py  c2ucb_bandit.py  focops.py  lagppo.py  marl_algorithms.py  marl_algorithms_tianshou.py  marl_utils.py  networks.py  networks_tianshou.py  nn_acgp.py  nn_agp.py  pcpo.py  rcpo.py
cropgymzoo/configs/: CO2_concentrations.csv  crop_info.yaml  crop_prices.csv  fertilizer_price.csv  fields.yaml  ppo_hyperparameters.yaml
cropgymzoo/configs/agro/: generic_cropcalendar.yaml
cropgymzoo/configs/crop/: sugarbeet.yaml  winterwheat.yaml
cropgymzoo/envs/: allocation_env.py  multi_field_env.py  obs_flatten_env.py  pcse_env.py  singular_env.py  worker_env.py  wrappers.py  wrappers_tianshou.py
cropgymzoo/utils/: agent_helpers.py  callbacks.py  callbacks_tianshou.py  curriculum.py  defaults.py  domain_randomizer.py  eval_tianshou.py  evaluate.py  evaluate_tianshou.py  helper_for_unit_tests.py  helpers_rllib.py  historical_forecasts.py  init_sub_env.py  model_picker.py  nitrogen_helpers.py  pcse_config_helper.py  plotters.py  process_pcse_output.py  rewards.py  scenario_utils.py  wrappers.py
cropgymzoo/utils_soil/: default_soil_variables.py  env_soil_functions.py  generate_soil_files.py  soil_feature_extractor.py  soilgrids.py
pcse_zoo/: __init__.py
pcse_zoo/configs/: fields.yaml  scenarios.yaml
pcse_zoo/envs/: allocation_env.py  obs_flatten_env.py  pcse_env.py  singular_env.py
pcse_zoo/utils/: defaults.py  init_sub_env.py  pcse_config_helper.py  rewards.py  soilgrids.py
pcse_zoo/utils_soil/: generate_soil_files.py  soilgrids.py
scripts/: agrodatacube_pull.py  generate_soilgrids_soil_file.py  pull_scenarios_soils.py  run_trained_policy.py  train_resource_allocation.py  training_fertilizer_policies.py  training_fertilizer_policies_rllib.py  training_fertilizer_policies_tianshou.py  training_resource_allocation.py
tests/: test_budget_functions.py  test_env_functions.py  test_envs.py  test_reward_functions.py
(+352 files in other folders)
