[project]
name = "cropgymzoo"
version = "0.1.0"
description = "Crop Management Environment for Resource Allocation"
authors = [
    { name = "Hilmy Baja", email = "hilmy.baja@wur.nl" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pettingzoo>=1.12.0,<1.25.0",
    "supersuit<=3.10.0",
    "pyyaml>=6.0.2",
    "torch>=1.9.0,<2.7.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
    "gymnasium>=0.28.1,<1.1.0",
    "SQLAlchemy>=1.3.0,<2.0",
    "PyYAML>=5.1",
    "openpyxl>=3.0.0",
    "requests>=2.0.0",
    "traitlets-pcse==5.0.0.dev",
    "dotmap>=1.3",
    "ipython-genutils>=0.2.0",
    "comet-ml>=3.50.0",
    "pcse",
]

[project.optional-dependencies]
tianshou = ["tianshou==1.2.0"]
rllib = ["ray[rllib]>=2.48.0"]
sb3 = ["stable_baselines3==2.7.0", "sb3_contrib==2.7.0", "pygame>=2.6.1"]

[tool.uv]
conflicts = [
  [ { extra = "tianshou" }, { extra = "rllib" }, { extra = "sb3" } ],
]

[tool.uv.sources]
pcse = { path = "../pcse", editable = true }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cropgymzoo"]