[project]
name = "cropgym"
version = "0.1.0"
description = "Crop Management Environment for Resource Allocation"
authors = [
    { name = "Hilmy Baja", email = "hilmy.baja@wur.nl" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pettingzoo>=1.12.0,<1.25.0",
    "supersuit<=3.10.0",
    "pyyaml>=6.0.2",
    "torch>=1.9.0,<2.7.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
    "gymnasium>=0.28.1,<1.1.0",
    "SQLAlchemy>=1.3.0,<2.0",
    "PyYAML>=5.1",
    "openpyxl>=3.0.0",
    "requests>=2.0.0",
    "traitlets-pcse==5.0.0.dev",
    "dotmap>=1.3",
    "ipython-genutils>=0.2.0",
    "comet-ml>=3.50.0",
    "pcse",
    "scikit-learn>=1.7.2",
    "pulp>=3.3.0",
]

[tool.uv.sources]
pcse = { path = "../pcse", editable = true }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cropgym", "cropgym.*"]

[tool.setuptools.package-data]
cropgym = [
    "configs/**/*.yaml",
    "configs/**/*.csv",
    "configs/**/*.conf",
    "configs/**/*.joblib",
]
